@@ -211,5 +211,139 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>java19PrestoORC</id>
+            <activation>
+                <jdk>19</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                    <version>3.4.6</version>
+                    <scope>test</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>net.bytebuddy</groupId>
+                            <artifactId>byte-buddy-agent</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>net.bytebuddy</groupId>
+                            <artifactId>byte-buddy</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.shared</groupId>
+                                <artifactId>maven-dependency-analyzer</artifactId>
+                                <version>1.13.2</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <failOnWarning>${air.check.fail-dependency}</failOnWarning>
+                            <ignoreNonCompile>true</ignoreNonCompile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>analyze-only</goal>
+                                    <goal>analyze-duplicate</goal>
+                                    <goal>analyze-dep-mgt</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.gaul</groupId>
+                        <artifactId>modernizer-maven-plugin</artifactId>
+                        <version>2.7.0</version>
+                        <configuration>
+                            <violationsFiles>
+                                <violationsFile>${air.main.basedir}/src/modernizer/violations.xml</violationsFile>
+                            </violationsFiles>
+                            <exclusionPatterns>
+                                <exclusionPattern>org/joda/time/.*</exclusionPattern>
+                                <exclusionPattern>com/google/common/.*</exclusionPattern>
+                            </exclusionPatterns>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-modules=jdk.incubator.vector --enable-preview</argLine>
+                            <!-- integration tests take a very long time so only run them in the CI server -->
+                            <excludes>
+                                <exclude>**/TestFullOrcReader.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>3.4.1</version>
+                        <configuration>
+                            <rules>
+                                <requireUpperBoundDeps>
+                                    <excludes combine.children="append">
+                                        <exclude>org.objenesis:objenesis</exclude>
+                                    </excludes>
+                                </requireUpperBoundDeps>
+                            </rules>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>lessThanJdk19PrestoOrc</id>
+            <activation>
+                <jdk>[1.8,19)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-compile</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <excludes>
+                                        <exclude>**/com/facebook/presto/orc/reader/vector/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-testCompile</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                                <configuration>
+                                    <testExcludes>
+                                        <exclude>**/com/facebook/presto/orc/reader/vector/**</exclude>
+                                    </testExcludes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
